# kiara.streamlit

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  setup.cfg  setup.py  versions.json
.github/workflows/: build-darwin.yaml  build-linux.yaml  build-windows.yaml
0.1.12/: index.html
0.1.13/usage/: index.html
0.1.2/: 404.html  index.html
0.1.7/: 404.html
0.1.8/search/: search_index.json
ci/conda/kiara.streamlit/: meta.yaml.template
ci/conda/kiara_modules.streamlit/: meta.yaml.template
docs/: index.md
examples/not_working/: workflow.py
examples/streamlit/: defaults.py  import.py  onboarding.py  operations.py  pipeline_structure.py  sql.py  widgets_gallery.py
examples/streamlit/data-centric/: data-centric.py
examples/streamlit/pipeline/: pipeline.py
examples/streamlit/workflow-app/: app.py  app_stages.py  app_steps.py  style.css
examples/streamlit/workflow-app/pipelines/: onboard_network_edges.json  onboard_network_nodes.json  workflow.json
latest/usage/: index.html
scripts/documentation/: gen_module_doc.py
src/kiara_streamlit/: __init__.py  defaults.py  metadata_schemas.py  streamlit.py  utils.py  value_types.py
src/kiara_streamlit/components/: __init__.py  file.py  mgmt.py  module.py  onboarding.py  operations.py  pipeline.py  processing.py  tabular_data.py  value_info.py  value_input.py
src/kiara_streamlit/data_centric/: __init__.py
src/kiara_streamlit/pipelines/: __init__.py  pipeline_page.py
src/kiara_streamlit/pipelines/pages/: __init__.py  stage.py  step.py
src/kiara_streamlit/resources/: module_dev.py  module_info.py
src/kiara_streamlit/resources/examples/component_examples/input/value_input/: value_input_1.py
src/kiara_streamlit/resources/examples/component_examples/input/value_input_array/: value_input_array_1.py
src/kiara_streamlit/resources/examples/component_examples/input/value_input_boolean/: value_input_boolean_1.py
src/kiara_streamlit/resources/examples/component_examples/input/value_input_date/: value_input_date_1.py  value_input_date_2.py
src/kiara_streamlit/resources/examples/component_examples/input/value_input_file/: value_input_file_1.py
src/kiara_streamlit/resources/examples/component_examples/input/value_input_file_bundle/: value_input_file_bundle_1.py
src/kiara_streamlit/resources/examples/component_examples/input/value_input_file_path/: value_input_file_path_1.py
src/kiara_streamlit/resources/examples/component_examples/input/value_input_folder_path/: value_input_folder_path_1.py
src/kiara_streamlit/resources/examples/component_examples/input/value_input_integer/: value_input_integer_1.py
src/kiara_streamlit/resources/examples/component_examples/input/value_input_string/: value_input_string_1.py
src/kiara_streamlit/resources/examples/component_examples/input/value_input_table/: value_input_table_1.py
src/kiara_streamlit/resources/examples/component_examples/input/value_select_box/: value_select_box_1.py
src/kiara_streamlit/resources/examples/component_examples/input/valueset_input/: valueset_input_1.py
src/kiara_streamlit/resources/examples/component_examples/module/module_config_panel/: module_config_panel_1.py
src/kiara_streamlit/resources/examples/component_examples/module/module_select/: module_select_1.py  module_select_2.py
src/kiara_streamlit/resources/examples/component_examples/module/write_module_config/: write_module_config_1.py
src/kiara_streamlit/resources/examples/component_examples/module/write_module_config_schema/: write_module_config_schema_1.py
src/kiara_streamlit/resources/examples/component_examples/module/write_module_info_page/: write_module_info_page_1.py
src/kiara_streamlit/resources/examples/component_examples/module/write_module_processing_code/: write_module_processing_code_1.py
src/kiara_streamlit/resources/examples/component_examples/module/write_module_type_metadata/: write_module_type_metadata_1.py
src/kiara_streamlit/resources/examples/component_examples/pipeline/pipeline_status/: pipeline_status_1.py
src/kiara_streamlit/resources/templates/: component_example.py.j2  component_example_input.py.j2
stable/usage/: index.html
tests/: test_kiara_modules_default.py
(+8 files in other folders)
