[metadata]
name = kiara.streamlit
description = Streamlit widgets for kiara.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DHARPA-project/kiara.streamlit
author = Markus Binsteiner
author_email = markus@frkl.io
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
install_requires =
    jinja2>=3.0.1
    kiara[cli]>=0.2.0
    kiara_modules.core>=0.2.0
    pyarrow>=5.0.0
    pydot>=1.4.0
    streamlit>=0.89.0
    streamlit-ace>=0.1.0
    streamlit-aggrid>=0.2.0
    streamlit-agraph>=0.0.35
    streamlit-pydantic>=0.4.0
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive
zip_safe = False

[options.entry_points]
kiara.metadata_schemas =
    streamlit = kiara_streamlit.metadata_schemas:metadata_schemas
kiara.modules =
    streamlit = kiara_streamlit:modules
kiara.pipelines =
    streamlit = kiara_streamlit.pipelines:pipelines
kiara.value_types =
    streamlit = kiara_streamlit.value_types:value_types

[options.extras_require]
dev_documentation =
    kiara[dev_documentation]
dev_testing =
    coveralls>=3.2.0
    flake8>=3.8.4
    mypy>=0.800
    pytest>=6.2.2
    pytest-cov>=2.11.1
    tox>=3.21.2
    types-pkg_resources
    types-python-dateutil
dev_utils =
    black
    cruft>=2.6.0
    flake8>=3.8.4
    ipython
    pip-licenses>=3.3.0
    pp-ez>=0.2.0
    pre-commit>=2.9.3
    setup-cfg-fmt>=1.16.0
    watchgod>=0.6
    wheel

[options.packages.find]
where = src
exclude =
    tests

[aliases]
build = bdist_wheel
release = build upload

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = sdist, bdist_wheel

[tool:pytest]
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[tox:tox]
envlist = py36, py37, py38, flake8

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
deps =
    -e{toxinidir}[dev_testing,all]
install_command = pip install --pre --extra-index-url https://pypi.fury.io/dharpa/ --extra-index-url=https://gitlab.com/api/v4/projects/25344049/packages/pypi/simple {opts} {packages}
commands =
    pip install -U pip
    py.test --basetemp={envtmpdir}

[testenv:flake8]
basepython = python
deps =
    -e{toxinidir}[dev_testing,all]
    flake8
install_command = pip install --pre --extra-index-url https://pypi.fury.io/dharpa/ --extra-index-url=https://gitlab.com/api/v4/projects/25344049/packages/pypi/simple {opts} {packages}
commands = flake8 src

[coverage:run]
branch = True
source = kiara_streamlit

[coverage:paths]
source =
    src/
    */site-packages/

[coverage:report]
exclude_lines =
    pragma: no cover
   
    def __repr__
    if self\.debug
   
    raise AssertionError
    raise NotImplementedError
   
    if 0:
    if __name__ == .__main__.:

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    .git
    __pycache__
ignore = F405, W503, E501
max-line-length = 88

[isort]
profile = black

[mypy]
mypy_path =
    src/
namespace_packages = true
plugins = pydantic.mypy

[mypy-appdirs]
ignore_missing_imports = true

[mypy-click]
ignore_missing_imports = true

[mypy-devtools]
ignore_missing_imports = true

[mypy-gensim.*]
ignore_missing_imports = true

[mypy-pandas]
ignore_missing_imports = true

[mypy-nltk.*]
ignore_missing_imports = true

[mypy-it_core_news_sm]
ignore_missing_imports = true

[mypy-networkx.*]
ignore_missing_imports = true

[mypy-pyarrow.*]
ignore_missing_imports = true

[mypy-ruamel.*]
ignore_missing_imports = true

[mypy-streamlit.*]
ignore_missing_imports = true

[mypy-streamlit_ace.*]
ignore_missing_imports = true

[mypy-streamlit_agraph.*]
ignore_missing_imports = true

[mypy-uvloop]
ignore_missing_imports = true
